added new confusion matrix

--- a/Mathematics/Time-Series/Modern-Time-Series/Intro-Time-Series.ipynb
+++ b/Mathematics/Time-Series/Modern-Time-Series/Intro-Time-Series.ipynb
@@ -133,7 +133,26 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Exponentially weighted moving averages (EWMA)\n",
+    "\n",
+    "#### With the rolling window mean operation, we were calculating the average of the window, and it works synonymously with the moving average. EWMA is the slightly smarter cousin of the moving average. While the moving average considers a rolling window and considers each item in the window equally on the computed average, EWMA tries to do a weighted average on the window, and the weights decay at an exponential rate. There is a parameter, , that determines how fast the weights decay. And because of this, we can consider all the history available as a window and let the  parameter decide how much recency is included in EWMA. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Temporal embedding\n",
+    "\n",
+    "#### In Chapter 5, Time Series Forecasting as Regression, we briefly talked about temporal embedding as a process where we try to embed time into features that the ML model can leverage. If we think about time for a second, we will realize that there are two aspects of time that are important to us in the context of time series forecasting – passage of time and periodicity of time.\n",
+    "\n",
+    "## Time elapsed\n",
+    "\n",
+    "#### This is another feature that captures the passage of time in an ML model. This feature increases monotonically as time increases, giving the ML model a sense of the passage of time. There are many ways to create this feature, but one of the easiest and most efficient ways is to use the integer representation of dates in NumPy:\n",
+    "\n",
+    "- df['time_elapsed'] = df['timestamp'].values.astype(np.int64)/(10**9)"
+   ]
   }
  ],
  "metadata": {
