--- a/Mathematics/Time-Series/Modern-Time-Series/Intro-Time-Series.ipynb
+++ b/Mathematics/Time-Series/Modern-Time-Series/Intro-Time-Series.ipynb
@@ -163,6 +163,18 @@
     "#### The null hypothesis in this test is that the  in an AR(1) model of the time series is equal to 1, and by extension non-stationary. The alternate hypothesis is that the  in the AR(1) model is less than 1. The ADF test takes the Dickey-Fuller test and extends it to an AR(p) model because most time series are not defined by just one lag of the time series. This is the standard and most popular statistical test to check for unit roots.\n",
     "#### result from adfuller is a tuple that contains the test statistic, p-value, and critical values at different confidence levels. Here, we are most interested in the p-value, which is an easy and practical way to check whether the null hypothesis is rejected or not. If p<0.05, there is a 95% probability that the series does not have a unit root; the series is stationary from a unit root perspective."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.transforms.target_transformations import AdditiveDifferencingTransformer\n",
+    "diff_transformer = AdditiveDifferencingTransformer()\n",
+    "# [1:] because differencing reduces the length of the time series by one\n",
+    "y_diff = diff_transformer.fit_transform(y, freq=\"1D\")[1:]\n"
+   ]
   }
  ],
  "metadata": {
