added new confusion matrix

--- a/Mathematics/Time-Series/Modern-Time-Series/Intro-Time-Series.ipynb
+++ b/Mathematics/Time-Series/Modern-Time-Series/Intro-Time-Series.ipynb
@@ -175,6 +175,20 @@
     "# [1:] because differencing reduces the length of the time series by one\n",
     "y_diff = diff_transformer.fit_transform(y, freq=\"1D\")[1:]\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mann-Kendall test (M-K test)\n",
+    "\n",
+    "#### The Mann-Kendall test is used to check for the presence of a monotonic upward or downward trend. And since the M-K test is a non-parametric test, like Kendall’s Tau, there is no assumption of normality or linearity. The test is done by analyzing the signs between consecutive points in the time series. The crux of the test is the idea that in the presence of a trend, the sign values, if summed up, increase or decrease constantly.\n",
+    "\n",
+    "#### Although non-parametric, there were a few assumptions in the original test:\n",
+    "\n",
+    "- There is no auto-correlation in the time series\n",
+    "- There is no seasonality in the time series"
+   ]
   }
  ],
  "metadata": {
