added new notes

--- a/Mathematics/Time-Series/Demand-Forecasting/Demand-Forecasting-Excellence.ipynb
+++ b/Mathematics/Time-Series/Demand-Forecasting/Demand-Forecasting-Excellence.ipynb
@@ -10,7 +10,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Objective. What Do you need to forecast?\n",
+    "\n",
+    "#### A forecast is a piece of information that various teams in the supply chain will use to make smart decisions (chapter 2). When discussing demand planning improvement with clients, I always start with why. “Why do you forecast demand? What decisions are you supporting with this forecast?” This should be your starting point too. (Answering these two main questions will also answer a third one: “Who will use this forecast?”) Knowing the types of decisions your supply chain needs to make (e.g., how much to produce, where to deploy inventory, whether to open or close plants) is the first step of the 5-step framework. Based on these decisions, we will assess the relevant material and temporal aggregation levels (chapter 5) as well as the forecasting horizon (chapter 6). We will also discuss how different teams might have to use different forecasting models and processes (chapter 7).\n",
+    "\n",
+    "## Data. What data do you need to support your forecasting model and process?\n",
+    "\n",
+    "#### The most critical data to collect is unconstrained demand rather than constrained sales (chapters 2 and 3). Moreover, you will also need to assess what external drivers impact your demand (such as promotions, pricing, or product launches) and start collecting this data as well (chapter 14)."
+   ]
   },
   {
    "cell_type": "markdown",
