added new notes

--- a/Mathematics/Time-Series/Demand-Forecasting/Demand-Forecasting-Excellence.ipynb
+++ b/Mathematics/Time-Series/Demand-Forecasting/Demand-Forecasting-Excellence.ipynb
@@ -17,7 +17,11 @@
     "\n",
     "## Data. What data do you need to support your forecasting model and process?\n",
     "\n",
-    "#### The most critical data to collect is unconstrained demand rather than constrained sales (chapters 2 and 3). Moreover, you will also need to assess what external drivers impact your demand (such as promotions, pricing, or product launches) and start collecting this data as well (chapter 14)."
+    "#### The most critical data to collect is unconstrained demand rather than constrained sales (chapters 2 and 3). Moreover, you will also need to assess what external drivers impact your demand (such as promotions, pricing, or product launches) and start collecting this data as well (chapter 14).\n",
+    "\n",
+    "## Metrics. How do you evaluate forecasting quality?\n",
+    "\n",
+    "#### First, you will need to select relevant metrics to assess your forecasting quality. We will discuss accuracy and bias in chapters 8 and 9. In chapter 10, you will learn how to assess if your forecasting model and process are achieving satisfactory accuracy thanks to benchmarks. In chapter 11, we will refine our metrics to cope with broad product portfolios."
    ]
   },
   {
