added new notes

--- a/Mathematics/Time-Series/Demand-Forecasting/Demand-Forecasting-Excellence.ipynb
+++ b/Mathematics/Time-Series/Demand-Forecasting/Demand-Forecasting-Excellence.ipynb
@@ -39,7 +39,13 @@
     "#### To properly forecast demand (rather than sales), we need to answer two questions:\n",
     "\n",
     "- How do we track demand rather than sales? We will discuss this in chapter 3.\n",
-    "- If you cannot track demand due to shortages, how should you forecast demand when facing historical shortages? We will discuss this in chapters 3 and 14."
+    "- If you cannot track demand due to shortages, how should you forecast demand when facing historical shortages? We will discuss this in chapters 3 and 14.\n",
+    "\n",
+    "#### Sales forecasts are constrained by supply and inventory. In contrast, demand forecasts are unconstrained and represent your clients’ expected demand (regardless of whether you have inventory or not).\n",
+    "\n",
+    "- Demand forecasting is about getting an unconstrained picture of your clients’ wishes (what they want, how much they want, when they want it).\n",
+    "- A demand forecast is a piece of information that will serve as input for the supply plan, financial budget, and sales targets.\n",
+    "- A demand forecast isn’t a plan, an objective, or a cash-flow income prediction."
    ]
   }
  ],
