added new notes

--- a/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
+++ b/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
@@ -51,6 +51,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "- The bullwhip effect (caused mainly by order forecasting, order batching, price fluctuations, shortage gaming, and variable lead times) will cause massive overstocks and shortages in supply chains.\n",
+    "- Bullwhip effect will ultimately result in extra costs and lower service levels for all stakeholders.\n",
+    "- Sharing demand and inventory data with your clients and suppliers will allow you to improve your forecasting accuracy and dampen the bullwhip effect. More information also usually means more stable lead times and fewer shortages.\n",
+    "- If your supplier-client relationship allows for planning alignment, you will also achieve massive savings thanks to multi-echelon inventory optimization."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
