--- a/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
+++ b/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
@@ -61,7 +61,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## The three forecasting dimensions\n",
+    "\n",
+    "- Demand forecasts are defined across three dimensions (or hierarchies): materiality, geography, and temporality.\n",
+    "- Materiality: You can forecast demand using different material levels: per SKU, product, segment, brand, and so on. As well as with different measuring metrics: units, value, weight, type of raw material required, . . . .\n",
+    "- Geography: You can forecast demand per country, region, market, channel, customer segment, warehouse, store, zip code, . . . .11\n",
+    "- Horizon: How many periods forward do you need to forecast (one week, six months, two years)?\n",
+    "\n",
+    "## Zooming In Or Out\n",
+    "- Bottom-up: Aggregated forecasts are created by summing up granular downstream levels. For example, you can sum up the forecasts of each store in a country to get a forecast at the country level.\n",
+    "- Top-down: Detailed forecasts are created by disaggregating high-level forecasts (usually) using simple rules. For example, You can transform a monthly forecast into a daily one using a flat split (dividing the monthly forecast into daily buckets of equal amounts). Similarly, top-down forecasts can also be split using historical splits relying on historical weighted averages (or ratios). For example, you can spread a national forecast into its national stores based on their historical revenues. In practice, many forecasting tools will rely on techniques using historical averages to disaggregate top-down forecasts.\n",
+    "- Middle-out: This is an in-between situation: you can use a single forecast to generate a more aggregated view and a detailed version. For example, starting with a forecast per country, you can sum it up per geographical region and spread it by store."
+   ]
   }
  ],
  "metadata": {
