added new notes

--- a/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
+++ b/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
@@ -72,7 +72,18 @@
     "## Zooming In Or Out\n",
     "- Bottom-up: Aggregated forecasts are created by summing up granular downstream levels. For example, you can sum up the forecasts of each store in a country to get a forecast at the country level.\n",
     "- Top-down: Detailed forecasts are created by disaggregating high-level forecasts (usually) using simple rules. For example, You can transform a monthly forecast into a daily one using a flat split (dividing the monthly forecast into daily buckets of equal amounts). Similarly, top-down forecasts can also be split using historical splits relying on historical weighted averages (or ratios). For example, you can spread a national forecast into its national stores based on their historical revenues. In practice, many forecasting tools will rely on techniques using historical averages to disaggregate top-down forecasts.\n",
-    "- Middle-out: This is an in-between situation: you can use a single forecast to generate a more aggregated view and a detailed version. For example, starting with a forecast per country, you can sum it up per geographical region and spread it by store."
+    "- Middle-out: This is an in-between situation: you can use a single forecast to generate a more aggregated view and a detailed version. For example, starting with a forecast per country, you can sum it up per geographical region and spread it by store.\n",
+    "\n",
+    "##### The idea is simple: because your supply chain makes decisions at specific hierarchical levels, you need to focus on forecasting demand to these particular aggregation levels.\n",
+    "\n",
+    "- Imagine you need to decide which products to ship from your plant to your regional warehouses. The best practice is to forecast demand per warehouse based on their geographical footprints (and not based on their actual historical shipments).\n",
+    "- Instead, you need to predict demand based on the geographical region that the warehouse usually serves. In other words, you need to forecast the demand that should be served from the warehouse, assuming there are no constraints. Tracking demand based on geography (for example, using zip codes) rather than outbound shipments is especially critical as warehouse footholds will change over time when new warehouses open or close.\n",
+    "\n",
+    "#### Many supply chains still forecast demand per country even though they have multiple warehouses serving different areas of the same country. This case is a clear discrepancy between the decisions that need to be made (in which warehouse should we ship our products) and the information used to make these (we will sell that much in this country). This too-common discrepancy will result in poor inventory allocation across warehouses.\n",
+    "\n",
+    "## Lag\n",
+    "\n",
+    "#### A lag denotes how many periods forward you are forecasting demand (as shown in figure 6.1). By convention, Lag 0 is the current period. For example, for a monthly forecast populated in January, Lag 0 denotes January, Lag 1 is February, Lag 2 is March, and so on."
    ]
   }
  ],
