added new notes

--- a/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
+++ b/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
@@ -83,7 +83,9 @@
     "\n",
     "## Lag\n",
     "\n",
-    "#### A lag denotes how many periods forward you are forecasting demand (as shown in figure 6.1). By convention, Lag 0 is the current period. For example, for a monthly forecast populated in January, Lag 0 denotes January, Lag 1 is February, Lag 2 is March, and so on."
+    "#### A lag denotes how many periods forward you are forecasting demand (as shown in figure 6.1). By convention, Lag 0 is the current period. For example, for a monthly forecast populated in January, Lag 0 denotes January, Lag 1 is February, Lag 2 is March, and so on.\n",
+    "\n",
+    "#### If you face seasonal demand, you can try using seasonal benchmarks. Instead of using the previous period(s) to forecast the next one, you use the same-period(s)-last-season(s) demand to forecast each new period. These forecasts are then called either seasonal naïve forecasts (only using information from the previous seasonal cycle) or seasonal moving averages (averaging multiple cycles)."
    ]
   }
  ],
