added new notes

--- a/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
+++ b/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
@@ -87,6 +87,31 @@
     "\n",
     "#### If you face seasonal demand, you can try using seasonal benchmarks. Instead of using the previous period(s) to forecast the next one, you use the same-period(s)-last-season(s) demand to forecast each new period. These forecasts are then called either seasonal naïve forecasts (only using information from the previous seasonal cycle) or seasonal moving averages (averaging multiple cycles)."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1.1 Internal benchmarks\n",
+    "\n",
+    "#### The idea of internal benchmarking is simple (figure 12.2):\n",
+    "\n",
+    "- Run a simple forecasting algorithm—such as a (seasonal) moving average—through historical periods and track its accuracy.\n",
+    "- Compare the benchmark’s results against your model/process. (Do not forget to do this for all relevant lags.)\n",
+    "\n",
+    "#### Using benchmarks to compare yourself with is the best practice to know if you are doing a good job at demand forecasting. The idea is to compare your forecasting process against a benchmark to see by how much extra accuracy you can beat it. This comparison will tell you a lot about process efficiency and efficacy: how much investment (in software and time) do you need to beat a simplistic method? By how much could you beat the benchmark?\n",
+    "\n",
+    "- Many companies providing benchmarks won’t compute forecast accuracy themselves. Instead, they will simply ask companies to respond to a survey. Who knows how your competitors measure forecast accuracy?\n",
+    "- Different companies will compute forecasting accuracy at different aggregation levels (for example, by country, whereas you track it per region) and horizons.\n",
+    "- Different businesses often follow different strategies, resulting in different product portfolio sizes, sales channels, and promotion strategies.33 These differences will result in natural differences in forecasting accuracy between companies within the same industry. For example, you might have 500 products in your catalog, whereas your main low-cost competitor only offers 20. Naturally, this will result in better accuracy. Nevertheless, the fact that your low-cost competitor achieves a good forecast accuracy doesn’t say anything about your own demand forecasting process.\n",
+    "- The same holds true for the distribution footprint. You might be present in some markets or channels, whereas your competitors will use a different distribution system.\n",
+    "- Moreover, industry benchmarks are often only available for a specific forecasting horizon (lag). You want to make sure your forecasting process is adding value along the whole relevant horizon (Chapter 6). Not just for a single lag."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
