added new notes

--- a/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
+++ b/Mathematics/Time-Series/Demand-Forecasting/Capturing-Demand.ipynb
@@ -115,7 +115,11 @@
     "- Focus on products for which you have information that the baseline model is unaware of (such as promotions, marketing, client actions). We will discuss this crucial best practice further in chapter 16.\n",
     "- Spend time on new products’ introduction. These are typically items for which you have more information than your model.\n",
     "- Review items manifesting strange behaviors such as consistent over/under-forecasting or massive demand shifts since last periods.\n",
-    "- Spend more time on high-cost products (or products with longer lead times) because forecast errors will be more expensive for these products. Critical items could be products with higher holding costs than usual, such as products requiring special storage conditions (frozen products) or with a short shelf-life (food, medicine)."
+    "- Spend more time on high-cost products (or products with longer lead times) because forecast errors will be more expensive for these products. Critical items could be products with higher holding costs than usual, such as products requiring special storage conditions (frozen products) or with a short shelf-life (food, medicine).\n",
+    "\n",
+    "## Demand driver\n",
+    "\n",
+    "#### Demand drivers are the factors influencing the purchasing behaviors of businesses and consumers. These drivers can be internal to your company (e.g., prices, marketing budget, or promotions) or external (e.g., weather or competitive activity)."
    ]
   }
  ],
